styles.css
:root { 
    --primary-color: #3498db;
    --primary-text-color: #000000;
    --secondary-color: #2ecc71;
    --lighter-background: #F0F4F8;
    --darker-background: #D8DDE5;
    --text-color: #2c3e50;
}
@font-face {
    font-family: 'Norse-Bold';
    src: url('https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf') format('opentype');
}
input[type="text"], input[type="email"], input[type="password"],input[type= "number"] {
    
    padding: 12px 20px;
    
    
}
body {
  font-family: 'Georgia', serif;
  background-color: var(--lighter-background);
  margin: 0;
  
}
.page { 
    margin: 0;
    font-size: 16px;
    min-height: 100vh;
    padding: 0;
    display: flex;
    flex-direction: row;
}
.main-content {
    flex: 1; 
    width: 70%;                 
    display: flex;            
    flex-direction: column;
}
.sidebar {
    width: 30%;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    position: relative;
}
.sidebar-box {
    position: absolute;
    background-color: rgba(15, 15, 15, 0.8);
    width: 100%;
    height: 20%;
    top: 20%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 10px;
}
.odin   {
    width: 20%;
    height: 75%;
    object-fit: scale-down;
    display: block;
}
.sidebar-box-text {
    font-size: 128px;
    color: white;
    font-family: 'Norse-Bold';
}
.head-section {
    background-color: var(--darker-background);
    height: 30%;
    padding: 20px;
    display: flex;
    flex-direction: column;
    font-size: 36px;
    padding-top: 72px;
    padding-right: 72px;
    text-align: left;
    text-wrap: wrap;
    justify-content: center;
    align-items: center
}
.signup {
    background-color: var(--lighter-background);
    height: 40%;
    padding: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}
.signup form {
    display: flex;
    flex-direction: row;
    gap: 20px;
    width: 100%;
}
.signup-left-column {
    width: 50%;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.signup-right-column {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.create-account {
    background-color: var(--darker-background);
    height: 35%;
    padding: 20px;
    display: flex;
    flex-direction: column;
}
.plant {
    width: 100%;
    height: 100%;
    object-fit: cover;
    margin: 0;
    display: block;
}

